[SUREFIRE-1262] Add modulepath support